# math6d

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  package.xml  setup.py
src/math6d/: __init__.py
src/math6d/geometry/: __init__.py  msg.py  quaternion.py  transform.py  vector3.py
src/math6d/geometry/test/: test_geometry.py
