<?xml version="1.0"?>
<package format="2">
    <name>math6d</name>
    <version>1.0.0</version>
    <description>ROS Rigid Transform Math Library</description>
    <maintainer email="william.ko@boeing.com">William Ko</maintainer>
    <author>Boeing</author>
    <license>Boeing Proprietary</license>
    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>python-enum34</exec_depend>
    <exec_depend>python-numpy</exec_depend>
    <exec_depend>python-typing</exec_depend>
</package>
